plugins {
    id 'application'
}

mainClassName = 'io.bdeploy.bhive.cli.BHiveCli'

dependencies {
    implementation project(":common")
    implementation project(":jersey")

    commonTestDeps(testFixtures(project(":common")))
    commonTestDeps(testFixtures(project(":jersey")))
    commonTestDeps(project(":logging"))
}

if(project.hasProperty("test.hive.override")) {
    ext.xTime = System.currentTimeMillis();
    testResultsDirName = "${buildDir}/test-results/${ext.xTime}"
}

distTar.enabled = false

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

startScripts {
    defaultJvmOpts = [ '-Xmx512m' ]
}
